css change to fix the horizontal scroll

--- a/css/index.css
+++ b/css/index.css
@@ -197,20 +197,17 @@ header .brand {
    padding:8px;
 }
 
-.hero .second{
-	
-}
 
 .main{
-	display:flex;
-	flex-direction: row;
-	flex-wrap:wrap;
-	justify-content: space-between;
-	width:880px;
-	margin:40px 0 20px 0;
-	padding:40px 0 40px 0;
-	border-top:1px solid #000;
-	border-bottom:1px solid #000;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    width: 880px;
+    margin: 40px 0;
+    padding: 40px 0;
+    border-top: 1px solid #000;
+    border-bottom: 1px solid #000;
 }
 
 .box-top{
@@ -323,20 +320,24 @@ footer p{
 
 /************************************** Media Queries ******************************/
 @media(max-width: 800px) {
-    body{
-        width: 800px;
-    }
+   
    .container{
        width:800;
-       padding:25px;
+       padding:40px;
    }
+
    header{
        width: 800px;
        flex-direction:column-reverse;
        align-content: space-around;
    }
+
    header nav{
        width: 800px;
+   }
+
+   header nav a{
+       padding:0px;
    }
    
     header .brand {
@@ -385,6 +386,7 @@ footer p{
 
 @media(max-width: 500px){
    .container{
+       width:500px;
        margin:0;
        padding:0;
    }
